--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+spring.resources.static-locations = classpath:/META-INF/resources/,classpath:/resources/.classpath:/resources/assets/js/,classpath:/resources/assets/css/,classpath:/static/,classpath:/public/
