successfully segregated project into two distinct parts via profiles; introduced the server, client, and default profiles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,8 +26,12 @@ spring.rabbitmq.host = localhost
 spring.rabbitmq.port = 5672
 spring.rabbitmq.username = guest
 spring.rabbitmq.password = guest
+spring.rabbitmq.queue = dashboard-mq
 
+server.port = 8080
 #server.session.timeout = 36000
+
+spring.profiles.active = client,server
 
 type = SERVER
 name = localhost
