--- a/src/main/resources/application-client.properties
+++ b/src/main/resources/application-client.properties
@@ -2,6 +2,9 @@ spring.rabbitmq.host = localhost
 spring.rabbitmq.port = 5672
 spring.rabbitmq.username = guest
 spring.rabbitmq.password = guest
+spring.rabbitmq.queue = dashboard-mq
+
+server.port = 8081
 
 type = CLIENT
 name = localhost
