--- a/src/main/resources/application-server.properties
+++ b/src/main/resources/application-server.properties
@@ -12,6 +12,9 @@ spring.rabbitmq.host = localhost
 spring.rabbitmq.port = 5672
 spring.rabbitmq.username = guest
 spring.rabbitmq.password = guest
+spring.rabbitmq.queue = dashboard-mq
+
+server.port = 8080
 
 type = SERVER
 name = localhost
