--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,16 @@
             <artifactId>spring-security-csrf-token-filter</artifactId>
             <version>1.1</version>
         </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.5.0</version>
+        </dependency>
     </dependencies>
 
     <properties>
