--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "gulp": "*",
     "gulp-concat": "*",
+    "gulp-changed": "*",
     "gulp-strip-debug": "*",
     "gulp-rename": "*",
     "gulp-uglify": "*",
